// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List List renders with an optional icon 1`] = `
.emotion-4 {
  display: inline-block;
  text-align: left;
  list-style: none;
}

.emotion-0 {
  margin-bottom: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-0 > div {
  margin-left: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 > svg {
  margin: 0;
}

.emotion-0 h5 {
  margin-bottom: 0;
}

.emotion-0 p {
  margin: 0;
}

<ul
  class="emotion-4 emotion-5"
>
  <li
    class="emotion-0 emotion-1"
  >
    <svg
      aria-hidden="true"
      data-testid="svgicon"
      fill="currentColor"
      focusable="false"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
      />
    </svg>
    <div>
      One
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
  >
    <svg
      aria-hidden="true"
      data-testid="svgicon"
      fill="currentColor"
      focusable="false"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
      />
    </svg>
    <div>
      <p>
        Two
      </p>
    </div>
  </li>
</ul>
`;

exports[`List List should render 1`] = `
.emotion-4 {
  display: inline-block;
  text-align: left;
  list-style: none;
}

.emotion-0 {
  margin-bottom: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-0 > div {
  margin-left: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 > svg {
  margin: 0;
}

.emotion-0 h5 {
  margin-bottom: 0;
}

.emotion-0 p {
  margin: 0;
}

<ul
  class="emotion-4 emotion-5"
>
  <li
    class="emotion-0 emotion-1"
  >
    <span>
      Lens icon Mock
    </span>
    <div>
      One
    </div>
  </li>
  <li
    class="emotion-0 emotion-1"
  >
    <span>
      Lens icon Mock
    </span>
    <div>
      <p>
        Two
      </p>
    </div>
  </li>
</ul>
`;
